# nest

./: .dockerignore  .gitignore  CONTRIBUTION.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.default.toml  default-config.toml  docker-compose.yml  index.html  init.py  init.srql
.github/: ci.yml
.github/workflows/: ci.yml
.sqlx/: query-004a8bf9d0fd6fa3aa27b534820a77af0198e511d38fbd166aa12d9eee250452.json  query-024bd708a12af6c1a7ec2b06590056486f90d5d789aa1b25d850f8630911b5d3.json  query-02e28b6521256ed703c7c621d0c750232a01886bc832d7a3088b61a4c906d2bc.json  query-187a44172359cf3d8ea658a72a0e5fe41ee0056501f8559c0aa82afccb052ab5.json  query-19ef7dca60f1abe14401e9f77fc2d2b2b3a7e405ebda2900e4963c7c2810fd65.json  query-1aa45ededc19e6c0d74e6b7f7b650efca56a727e0e38a26a5dce2355b0922ec5.json  query-45949cd8a84364305b9924d4f1f42e8ffa95889a5160ef5657c56076cbd60d7a.json  query-4634a9440c5ace877f60c6dddd872dab54e216069386d143d30f4e5514d1c5c0.json  query-48a7b6bb575054bf8055547860700f0b773a6fcaf040b29f03e24132acaf385b.json  query-53fb18ac366a3a438b8f497cf7e198b4fda8a9e949648d6f1cbd739d3b12dda1.json  query-587208b744f02322b0062fa0aaee80cdfb35f0673495e6f1a86b2a2f0152508a.json  query-60b525c178f2cad080563ea589e2c3ebf5f59be1ca8cafbc4dad7346124c92a4.json  query-7906d6e3c30995c763b7e7f02ff0e0ec8545729840a8e92cf84544575b7f4b5e.json  query-7d5217a17aeef0e7294b4abdfbb44ba948d0489ec411357a87f6865f0109b52d.json  query-82b60dee4f152e021d0b17e546e5f9cbfbfb6d3c43525fcd7363f8a74c6097bd.json  query-8a156ae3c15b381f670a252575f34409890e5f063cf09b6420e0f05cda1eb034.json  query-9b0436e3e0ebbb71433173ffef0a47bbbaa3103a9ddc06fd9cbe5af7ea007ea0.json  query-a6212025330a6133f9953c5e83ac114e76b4ae34b762e3d6e03b8f29687054e2.json  query-bd5cb5908569e83dc62b64fb7df7f60b0b52eb9e2cb1fc5d31f1a52a65c521ee.json  query-c4757196c55a7ad972698d29ee806294b89a4738d557117628db23b6a30ecdf7.json  query-ca7bdad8f6f89f00dd52cc64ee1c7b8e7537abd5755e1895a37725cd257040b8.json  query-d402fed7990ed8a695068f4eb4ed994c9b2c6efa2cc8bfc55b390bd3c22e0c03.json  query-d4cecb7e2b366d163bf1035d7f26699e9a82b220eff8577e4bf198ac6a502c07.json  query-d7ff76743b11dfc50b1a0fcd063ec86c8e5490f7c0a1abfa9953636d849c923b.json  query-dbc5b97b03f18922020569ab9d8e225c58e7290363273e3c50a2bce6b9b9ed8f.json  query-e49f328c8fa8f3a03fdcd436766bcf438e94d7bc949632368b3895c7561bf731.json  query-e50c7d63dc713b53f269d60b52b1a948b966f0bcf9ebb79ea5f2532cd3460069.json  query-e8ed968828a6f3b9db6ae3a18dc8c3e510ce88a7611d8b60ae625e7bee2b3f1a.json  query-f5c296e76947fcf5f496b58161e0fdb6bc16d28f98cbf90ff563c03b41cd5c52.json  query-fc961881aea6e2ffeac9342ed551bca7ecc787e6378597949b83b53fa6489132.json
configurations/: config.docker.toml
examples/poetry-package/: README.md  build.py  pyproject.toml
examples/poetry-package/poetry_package/: hello_world.py
examples/wheels/: httpcore-1.0.4-py3-none-any.whl  httpx-0.27.0-py3-none-any.whl
migrations/: 20230731200748_add-project-schemas.down.sql  20230731200748_add-project-schemas.up.sql  20230731200748_add-project-to-schemas.down.sql  20230731200748_add-project-to-schemas.up.sql  20230731201032_add-release-schemas.down.sql  20230731201032_add-release-schemas.up.sql  20230731201032_add-release-to-schemas.down.sql  20230801113620_add-user-schemas.down.sql  20230801113620_add-user-schemas.up.sql  20230804221133_pg_func_pep426.down.sql  20230804221133_pg_func_pep426.up.sql  20230809203114_pg_func_pep440.down.sql  20230809203114_pg_func_pep440.up.sql
my-module/: README.md  pyproject.toml
my-module/my_module/: __init__.py
src/: app_state.rs  documentation.rs  engine.rs  greeting.rs  healthcheck.rs  home.rs  lib.rs  main.rs  mirror.rs  package.rs  pkg_file.rs  pypa.rs  request_id.rs  settings.rs  simple.rs  simple_api.rs  startup.rs  state.rs  store.rs  telemetry.rs  users.rs
src/api/: mod.rs  simple.rs  state.rs
src/api/simple/: controller.rs  mod.rs  models.rs  router.rs
src/authentication/: middleware.rs  mod.rs  password.rs  sessions.rs  users.rs
src/components/: header.rs
src/db/: store.rs
src/front/: documentation.rs  home.rs  mod.rs  profile.rs  search.rs  serve_static.rs
src/front/manage/: mod.rs  sign_in.rs  sign_up.rs
src/manage/: mod.rs  sign_in.rs  sign_up.rs  users.rs
src/persistence/: mod.rs  store.rs
src/persistence/query/: get_dist.srql  get_metadata.srql  upload_package.srql
src/persistence_surreal/: store.rs  users.rs
src/persistence_surreal/query/: get_dists.srql  get_versions.srql
src/routes/: healthcheck.rs  home.rs  middleware.rs  mod.rs  simple.rs
src/routes/manage/: mod.rs  sign_in.rs  sign_up.rs
src/routes/simple/: controller.rs  mod.rs  models.rs  router.rs
src/routes/simple/templates/: simple-package.html  simple.html
src/routes/users/: controller.rs  models.rs
src/search/: mod.rs
src/simple/: mod.rs  models.rs  package.rs  simple_api.rs  store.rs
src/template/: simple-package.html  simple.html
static/: index.html  index.js  theme-switcher.js
templates/: base.jinja  documentation.jinja  navbar.jinja
templates/home/: home.jinja
templates/home/components/: package-card.jinja
templates/sign_in/: sign_in.jinja
templates/sign_up/: sign_up.jinja
templates/sign_up/components/: sign_up_error.jinja  sign_up_success.jinja
templates/simple/: dists.jinja  packages.jinja
tests/: client.rs
tests/api/: healthcheck.rs  helpers.rs  main.rs
