[package]
name = "nest"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "nest"

[dependencies]
async-trait = "0.1.68"
axum = { version = "0.6.10", features = ["multipart", "headers"] }
axum_typed_multipart = "^0.3.0"
bytes = "1.4.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
object_store = "0.5.5"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.95"
surrealdb = "1.0.0-beta.9+20230402"
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
time = ">=0.2.23"
hyper = "0.14.26"
toml = "0.7.3"
anyhow = "1"
axum-macros = "0.3.7"
liquid = "0.26.1"

[dev-dependencies]
anyhow = "1"
reqwest = "0.11.17"

[profile.release]
lto = true
