[package]
name = "nest"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "nest"

[dependencies]
async-trait = "0.1.68"
axum = { version = "0.6.10", features = ["multipart", "headers"] }
axum_typed_multipart = "^0.3.0"
bytes = "1.4.0"
futures = "0.3.28"
log = "0.4.17"
object_store = "0.5.5"
serde = { version = "1.0.155", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.95"
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
time = ">=0.2.23"
hyper = "0.14.26"
toml = "0.7.3"
validator = { version = "0.16.0", features = ["derive"] }
tower-http = { version = "0.4.0", features = ["normalize-path", "redirect", "trace", "uuid", "request-id", "util", "add-extension"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tokio-stream = { version = "0.1.14", features = ["tokio-util", "io-util"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.7"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-log = "0.1.3"
uuid = { version = "1.3.2", features = ["v4"] }
maud = { version = "0.25.0", features = ["axum"] }
sqlx = { version = "0.7.1", features = ["sqlx-postgres", "postgres", "runtime-tokio", "uuid"] }
regex = "1.9.3"
argon2 = "0.5.1"
secrecy = "0.8.0"
rand = "0.8.5"
anyhow = "1"

[dev-dependencies]
anyhow = "1"
reqwest = "0.11.17"

[profile.release]
lto = true
