[package]
name = "nest"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "nest"

[dependencies]
anyhow = "1"
argon2 = "0.5.1"
async-trait = "0.1.68"

axum = { version = "0.7.1", features = ["multipart", "macros"] }
axum-extra = { version = "0.9.0", features = ["typed-header", "multipart"] }
axum-template = { version = "2.2.0", features = ["minijinja", "minijinja-autoreload"] }
axum_typed_multipart = "0.11.0"

bytes = "1.4.0"
futures = "0.3.28"

hyper = { version = "1.2.0", features = ["server"] }
hyper-util = { version = "0.1.3", features = ["tokio", "server-auto"] }
log = "0.4.21"
minijinja = { version = "1.0.12", features = ["loader"] }
minijinja-autoreload = "1.0.12"
object_store = "0.5.5"
pulldown-cmark = "0.9.3"
rand = "0.8.5"
regex = "1.9.3"
secrecy = "0.8.0"
serde = { version = "1.0.155", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.95"
sqlx = { version = "0.7.1", features = ["sqlx-postgres", "postgres", "runtime-tokio", "uuid"] }
time = ">=0.2.23"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["tokio-util", "io-util"] }
tokio-util = { version = "0.7.8", features = ["io"] }
toml = "0.7.3"

tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["trace", "add-extension", "request-id", "util", "normalize-path", "redirect", "uuid", "fs"] }

tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.3.2", features = ["v4"] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
reqwest = "0.11.17"

[profile.release]
lto = true
